--- a/index.html
+++ b/index.html
@@ -5,8 +5,162 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Lamp</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <style>
+body{
+    margin: 30px 30px;
+    background: #dea478;
+    /* color:#155263 */
+    /* background-image: linear-gradient(to left,#dea478,orange); */
+}
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
+#logo{
+  display: flex;
+}
+#logo img{
+  width: 50px;
+  height:50px;
+}
+
+
+#logo h1{
+  font-size: 30px;
+  margin: 0;
+  margin-top: 10px;
+  margin-left:20px;
+  color:#155263;
+  /* color:#240747; */
+  /* color:#3a9679; */
+  font-weight: bold;
+}
+
+#logo p{
+  margin-top: 25px;
+  margin-left: 20px;
+  font-weight: bold;
+  font-style: italic;
+}
+#container{
+  display: flex;
+  justify-content: center;
+  margin-top: 300px;
+}
+#footer{
+  position:fixed;
+  bottom:20px;
+}
+
+/* .lds-ripple{
+  position: absolute;
+  left:50%;
+  margin-left: -40px;
+  margin-top: 300px;
+} */
+
+input{
+  display:none;
+}
+#file-input-container{
+  width:300px;
+  height:80px;
+  background-color: #155263;
+  border-radius: 20px;
+  color:#fff;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+}
+
+#file-input-container img{
+  width:50px;
+  height:50px;
+
+}
+
+    </style>
 </head>
 <body>
-<div id="container"></div>
+
+<div id="logo">
+    <img src="./logo.png" alt="lamp">
+    <h1>One Lamp </h1> <p>Smart Matching System</p>
+  </div>
+<div id="container">
+  <div id="file-input-container">
+    <img src="upload.png" alt="">
+    <p>Upload OPL File</p>
+    <input type="file" id="opl" />
+    <!-- <div class="lds-ripple"><div></div><div></div></div> -->
+
+
+  </div>
+
+
+<div id="footer">
+  <p>A single lamp may light hundreds of thousands of lamps without itself being diminished. <span style="font-size:16px; font-style: italic; font-weight: bold;">- Vimalakirti Sutra</span> </p>
+  <p>譬如一灯燃百千灯,冥者皆明,明终不尽。 -《维摩诘所说经》</p>
+</div>
+
+
+</div>
+
+<script>
+var uploadOPL=document.getElementById("file-input-container")
+uploadOPL.addEventListener('click',function(){
+  document.getElementById("opl").click()
+})
+</script>
 </body>
 </html>
