--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ body{
 
 
 #logo h1{
-  font-size: 30px;
+  font-size: 18px;
   margin: 0;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   margin-left:20px;
   color:#155263;
   /* color:#240747; */
@@ -86,7 +86,7 @@ body{
 }
 
 #logo p{
-  margin-top: 25px;
+  margin-top: 33px;
   margin-left: 20px;
   font-weight: bold;
   font-style: italic;
@@ -129,13 +129,27 @@ input{
 
 }
 
+
+#file-input-container p{
+  font-family:sans-serif;
+
+}
+#brand-container{
+  margin-top: 5px;
+}
+
     </style>
 </head>
 <body>
 
 <div id="logo">
     <img src="./logo.png" alt="lamp">
-    <h1>One Lamp </h1> <p>Smart Matching System</p>
+    <div id="brand-container">
+      <h1>一灯</h1>
+      <h1>One Lamp </h1>
+    </div>
+    
+    <p>Smart Matching System</p>
   </div>
 <div id="container">
   <div id="file-input-container">
